Adicionado home, cards e navbar

--- a/streamwise-frontend/angular.json
+++ b/streamwise-frontend/angular.json
@@ -21,10 +21,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
@@ -97,5 +94,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "030af489-5d9c-4285-bab4-32a354a2e1a0"
   }
 }
