--- a/streamwise-backend/gradle/wrapper/gradle-wrapper.properties
+++ b/streamwise-backend/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://signatures.gradle.org/distributions/gradle-8.10.2-bin.zip
+distributionUrl=file:/C:/Tools/Gradle/gradle-8.10.2-bin.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
