--- a/streamwise-backend/src/main/resources/application-dev.yml
+++ b/streamwise-backend/src/main/resources/application-dev.yml
@@ -1,8 +1,11 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:streamWise
+    url: jdbc:postgresql://localhost:5432/streamwise
     username: streamwise
-    password:
+    password: admin
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 10
   jpa:
     show-sql: true
     open-in-view: false
@@ -11,10 +14,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   h2:
     console:
-      enabled: true
-      path: /h2-console
-      settings:
-        trace: false
-        web-allow-others: false
+      enabled: false
