--- a/streamwise-backend/Dockerfile
+++ b/streamwise-backend/Dockerfile
@@ -1,11 +1,22 @@
 # Usa uma imagem oficial do OpenJDK como base
-FROM openjdk:17-jdk-slim
+FROM openjdk:17-jdk-slim AS build
 
-# Define o diretório de trabalho dentro do container
+# Define o diretório de trabalho para a construção do projeto
 WORKDIR /app
 
-# Copia o arquivo JAR da aplicação para o container
-COPY build/libs/StreamWise-0.0.1-SNAPSHOT.jar app.jar
+# Copia os arquivos do projeto para dentro do container
+COPY . .
+
+# Baixa dependências e gera o .jar
+RUN ./gradlew build -x test
+
+# Usa uma nova imagem apenas para rodar a aplicação
+FROM openjdk:17-jdk-slim
+
+WORKDIR /app
+
+# Copia o .jar gerado na fase anterior
+COPY --from=build /app/build/libs/StreamWise-0.0.1-SNAPSHOT.jar app.jar
 
 # Expor a porta da aplicação
 EXPOSE 8080
