--- a/streamwise-frontend/package.json
+++ b/streamwise-frontend/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "streamwise-frontend": "file:",
