--- a/streamwise-backend/Dockerfile
+++ b/streamwise-backend/Dockerfile
@@ -4,7 +4,7 @@ FROM openjdk:17-jdk-slim AS build
 # Definindo o diretório de trabalho
 WORKDIR /app
 
-# Instalando wget, unzip e dependências do Gradle
+# Instalando wget e unzip, caso precise mais tarde
 RUN apt-get update && \
     apt-get install -y wget unzip && \
     rm -rf /var/lib/apt/lists/*
@@ -16,10 +16,10 @@ COPY build.gradle /app/
 COPY settings.gradle /app/
 COPY src /app/src
 
-# Baixando e instalando o Gradle (caso precise, mas com o gradlew, não é necessário)
+# Garantindo que o Gradle Wrapper tenha permissão de execução
 RUN chmod +x gradlew
 
-# Comando para rodar o build
+# Comando para rodar o build com Gradle Wrapper (não precisa baixar Gradle manualmente)
 RUN ./gradlew build -x test
 
 # Usando uma imagem base para o ambiente de execução (JDK 17)
@@ -31,5 +31,5 @@ WORKDIR /app
 # Copiando a aplicação compilada do estágio de build para o container final
 COPY --from=build /app/build/libs /app
 
-# Definindo o comando para rodar a aplicação (ajuste conforme necessário)
+# Definindo o comando para rodar a aplicação
 CMD ["java", "-Dspring.profiles.active=dev", "-jar", "/app/StreamWise-0.0.1-SNAPSHOT.jar"]
