--- a/streamwise-frontend/package.json
+++ b/streamwise-frontend/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.1.0",
+    "@angular/animations": "^18.2.13",
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
     "@angular/core": "^18.1.0",
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "jwt-decode": "^4.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "streamwise-frontend": "file:",
     "tslib": "^2.3.0",
