--- a/streamwise-backend/docker-compose.yml
+++ b/streamwise-backend/docker-compose.yml
@@ -6,34 +6,12 @@ services:
     container_name: streamwise-backend
     ports:
       - "8080:8080"
-    depends_on:
-      - db
     env_file:
       - .env
     environment:
-      SPRING_PROFILES_ACTIVE: prod
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/streamwise_db
-
+      SPRING_PROFILES_ACTIVE: dev
     networks:
       - streamwise-network
-
-  db:
-    image: postgres:15
-    container_name: streamwise-db
-    restart: always
-    environment:
-      POSTGRES_DB: streamwise_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - streamwise-network
-
-volumes:
-  postgres_data:
 
 networks:
   streamwise-network:
