--- a/streamwise-backend/src/main/resources/application-dev.yml
+++ b/streamwise-backend/src/main/resources/application-dev.yml
@@ -1,22 +1,14 @@
 spring:
   datasource:
-    url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-    username: ${PGUSER}
-    password: ${PGPASSWORD}
-    driver-class-name: org.postgresql.Driver
-    hikari:
-      maximum-pool-size: 10
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
   jpa:
-    show-sql: true
-    open-in-view: false
     hibernate:
       ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
   h2:
     console:
-      enabled: false
-
+      enabled: true
 JWT_SECRET: ${JWT_SECRET}
